第2問(1)(b)を修正

--- a/field1/2019/main.tex
+++ b/field1/2019/main.tex
@@ -45,13 +45,13 @@ $x$軸方向の力のつり合いから、
 
 \subsection{}
 \begin{align}
-  V &= \iint \tau \mathrm{d} A \\
-  M &= \iint \sigma z \mathrm{d} A
+  V & = \iint \tau \mathrm{d} A     \\
+  M & = \iint \sigma z \mathrm{d} A
 \end{align}
 より、
 \begin{align}
-  V &= \int_{-\frac{h}{2}}^{\frac{h}{2}} \tau w \mathrm{d} z \\
-  M &= \int_{-\frac{h}{2}}^{\frac{h}{2}} \sigma z w \mathrm{d} z
+  V & = \int_{-\frac{h}{2}}^{\frac{h}{2}} \tau w \mathrm{d} z     \\
+  M & = \int_{-\frac{h}{2}}^{\frac{h}{2}} \sigma z w \mathrm{d} z
 \end{align}
 である。
 
@@ -82,9 +82,9 @@ $x$軸方向の力のつり合いから、
 \subsection{}
 式(8)に式(14)、式(9)に$\sigma = A(x) z$をそれぞれ代入すると、
 \begin{align}
-  M &= \int_{-\frac{h}{2}}^{\frac{h}{2}} A(x) z^2 w \mathrm{d} z
-  = \frac{A(x)}{12} w h^3 \\
-  V &= \int_{-\frac{h}{2}}^{\frac{h}{2}}
+  M & = \int_{-\frac{h}{2}}^{\frac{h}{2}} A(x) z^2 w \mathrm{d} z
+  = \frac{A(x)}{12} w h^3                                         \\
+  V & = \int_{-\frac{h}{2}}^{\frac{h}{2}}
   \frac{1}{2} A^{\prime}(x) \left(\frac{h^2}{4} - z^2\right) \mathrm{d} z
   = \frac{A^{\prime}(x)}{12} w h^3
 \end{align}
@@ -110,7 +110,7 @@ $x$軸方向の力のつり合いから、
 で与えられる。
 
 \subsubsection{}
-円柱は単振動し、その振動数は$2 \pi \sqrt{\frac{m}{\rho g \pi r^2}}$となる。
+円柱は単振動し、その周期は$2 \pi \sqrt{\frac{m}{\rho g \pi r^2}}$となる。
 
 \subsection{}
 \subsubsection{}
@@ -128,8 +128,8 @@ $x$軸方向の力のつり合いから、
 \end{equation}
 となる。この微分より、質点の速度と加速度はそれぞれ、
 \begin{align}
-  \dot{x} &= -\sqrt{\frac{2k}{M}} A \sin \sqrt{\frac{2k}{M}} t \\
-  \ddot{x} &= -\frac{2k}{M} A \cos \sqrt{\frac{2k}{M}} t
+  \dot{x}  & = -\sqrt{\frac{2k}{M}} A \sin \sqrt{\frac{2k}{M}} t \\
+  \ddot{x} & = -\frac{2k}{M} A \cos \sqrt{\frac{2k}{M}} t
 \end{align}
 となる。
 
