第2問 (2), (3)を修正

--- a/field1/2023/main.tex
+++ b/field1/2023/main.tex
@@ -221,19 +221,19 @@ $t: \varphi/\omega \rightarrow (\varphi + 2 \pi) / \omega$の
   \begin{aligned}
     \int c \dot{x} \mathrm{d} x
      & = \int_{\varphi / \omega}^{(\varphi + 2 \pi) / \omega}
-    c \dot{x} \times \dot{x} \mathrm{d} t                                           \\
+    c \dot{x} \times \dot{x} \mathrm{d} t                                                            \\
      & =\int_{\varphi / \omega}^{(\varphi + 2 \pi) / \omega}
-    \frac{P_0 \omega c}{(-m \omega^2 + k)^2 + (c \omega)^2}
-    \cos^2 (\omega t - \varphi) \mathrm{d} t                                        \\
-     & = \frac{P_0 \omega c}{(-m \omega^2 + k)^2 + (c \omega)^2} \frac{\pi}{\omega} \\
-     & = \frac{P_0 c \pi}{(-m \omega^2 + k)^2 + (c \omega)^2}
+    \frac{\left(P_0\right)^2 \omega^2 c}{(-m \omega^2 + k)^2 + (c \omega)^2}
+    \cos^2 (\omega t - \varphi) \mathrm{d} t                                                         \\
+     & = \frac{\left(P_0\right)^2 \omega^2 c}{(-m \omega^2 + k)^2 + (c \omega)^2} \frac{\pi}{\omega} \\
+     & = \frac{\left(P_0\right)^2 \omega c \pi}{(-m \omega^2 + k)^2 + (c \omega)^2}
   \end{aligned}
 \end{equation}
 となる．これが$E_D$と等しくなるような$c$は，
 \begin{equation}
   \label{eq:eta_to_c}
   c = \frac{2 \eta k \left(x_0\right)^2
-    \left\{(-m \omega^2 + k)^2 + (c \omega)^2\right\}}{P_0 \pi}
+    \left\{(-m \omega^2 + k)^2 + (c \omega)^2\right\}}{\pi \omega \left(P_0\right)^2}
 \end{equation}
 
 \subsection{}
@@ -257,7 +257,7 @@ equivalent viscous systemにおいて，
 \end{equation}
 これを式(\ref{eq:eta_to_c})に代入して，
 \begin{equation}
-  \eta = \frac{P_0 \pi}{2 k \left(x_0\right)^2
+  \eta = \frac{\pi \omega \left(P_0\right)^2}{2 k \left(x_0\right)^2
     \left\{(-m \omega^2 + k)^2 + (c \omega)^2\right\}}
   \sqrt{-\frac{8k^2}{9\omega^2} + 2mk + m^2 \omega^2}
 \end{equation}
