--- a/field1/2024/main.tex
+++ b/field1/2024/main.tex
@@ -438,7 +438,7 @@ $y = 0$として，鉛直上向きに$y$軸をとる．
    & = \left\{\frac{m L}{2} + \frac{M}{2}
   \left(1 - \cos \frac{2 \pi v t}{L}\right)\right\} \ddot{a}_1(t)
   + \frac{3 \pi M v}{2 L} \dot{a}_1(t) \sin \frac{2 \pi v t}{L}
-  L \frac{\pi^2 M v^2}{L^2} \cos \frac{2 \pi v t}{L} a_t(t)             \\
+  + \frac{\pi^2 M v^2}{L^2} \cos \frac{2 \pi v t}{L} a_t(t)             \\
   \frac{\partial T}{\partial a_1}
    & = \frac{\pi M v}{2 L} \sin \frac{2 \pi v t}{L} \dot{a}_1(t)
   + \frac{\pi^2 M v^2}{2 L^2} \left(1 + \cos \frac{2 \pi v t}{L}\right) \\
